<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="Déclare un incident"/>


            <EditText
                android:id="@+id/declaration_title_input"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="80dp"
                android:hint="@string/declaration_title_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/declaration_type_label"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/declaration_title_input"
                android:text="@string/declaration_type_label" />

            <Spinner
                android:id="@+id/declaration_type_spinner"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/declaration_type_label"></Spinner>


            <TextView
                android:id="@+id/declaration_location_label"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/declaration_type_spinner"
                android:text="@string/declaration_location_label" />

            <Spinner
                android:id="@+id/declaration_location_spinner"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/declaration_location_label"></Spinner>

            <SeekBar
                android:id="@+id/declaration_importance_seekBar"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/declaration_type_label"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:max="5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/declaration_location_spinner" />

            <EditText
                android:id="@+id/declaration_description_input"
                android:layout_width="350dp"
                android:layout_height="90dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:gravity="bottom"
                android:hint="@string/declaration_description_label"
                android:inputType="text|textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/declaration_importance_seekBar" />

            <Button
                android:id="@+id/declaration_submit_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginBottom="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:text="@string/declaration_submit_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/declaration_description_input" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>